more page structure and styling. fixed spelling error on user-scalable, notes on display: none vs visibilty: hidden

--- a/Websites/Math_Game/style.css
+++ b/Websites/Math_Game/style.css
@@ -12,6 +12,8 @@ html {
     border-radius: 10px;
     /* box-shadow: [horizontal offset] [vertical offset] [blur radius] [optional spread radius] [color] */
     box-shadow: 0px 4px 0px 0px #009de4;
+    -moz-box-shadow: 0px 4px 0px 0px #009de4;
+    -webkit-box-shadow: 0px 4px 0px 0px #009de4;
     /*
      * in order to position the boxes inside relative to the container, it needs a relative position
      * if not, the positioning of the other elements would be relative to the body element because
@@ -27,6 +29,8 @@ html {
     position: absolute;
     left: 500px;
     box-shadow: 0px 4px #9DA853;
+    -webkit-box-shadow: 0px 4px #9DA853;
+    -moz-box-shadow: 0px 4px #9DA853;
 
 }
 
@@ -54,9 +58,110 @@ html {
     margin: 50px auto 10px auto;
     background-color: #9DA0EA;
     box-shadow: 0px 4px #535AA8;
+    -moz-box-shadow: 0px 4px #535AA8;
+    -webkit-box-shadow: 0px 4px #535AA8;
     font-size: 100px;
     /* text will appear at top, use line-height to adjust if needed */
     text-align: center;
     font-family: cursive , sans-serif;
     color: black;
+}
+
+#instruction {
+    width: 450px;
+    height: 50px;
+    background-color: #8481D9;
+    margin: 10px auto;
+    text-align: center;
+    line-height: 45px;
+    box-shadow: 0px 4px #8153A8; 
+    -moz-box-shadow: 0px 4px #8153A8; 
+    -webkit-box-shadow: 0px 4px #8153A8; 
+}
+
+#choices {
+    height: 100px;
+    width: 450px;
+    margin: 5px auto;
+}
+
+.box {
+    width: 85px;
+    height: 85px;
+    background-color: white;
+    /* to make them have inline styling instead of stacked:  */
+    float: left;
+    margin-right: 36px;
+    border-radius: 3px;
+    cursor: pointer;
+    box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    line-height: 80px;
+    position: relative;
+    transition: all 0.2s;
+    -webkit-transition: all 0.2s;
+    -moz-transition: all 0.2s;
+    -o-transition: all 0.2s;
+    -ms-transition: all 0.2s;
+}
+
+.box:hover, #startReset:hover {
+    background-color: #9C89F6;
+    color: white;
+    box-shadow: 0px 4px #6B54D3;
+    -moz-box-shadow: 0px 4px #6B54D3;
+    -webkit-box-shadow: 0px 4px #6B54D3;
+}
+
+.box:active, #startReset:active {
+    box-shadow: 0px 0px #6B54D3;
+    -moz-box-shadow: 0px 0px #6B54D3;
+    -webkit-box-shadow: 0px 0px #6B54D3;
+    top: 4px;
+}
+
+#box4 {
+    /* since this margin-right: comes after the .box property, it will overwrite for box4 */
+    margin-right: 0;
+}
+
+#startReset {
+    width: 78px;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.5);
+    margin: 0 auto;
+    border-radius: 3px;
+    cursor: pointer;
+    box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    position: relative;
+    transition: all 0.2s;
+    -webkit-transition: all 0.2s;
+    -moz-transition: all 0.2s;
+    -o-transition: all 0.2s;
+    -ms-transition: all 0.2s;
+
+}
+
+#timeRemaining {
+    width: 152px;
+    padding: 10px;
+    position: absolute;
+    top: 395px;
+    left: 400px;
+    background-color: rgba( 181, 235, 36, 0.78);
+    border-radius: 3px;
+    box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    /*
+     * visibility: hidden vs display: none :
+     * if you apply visibility: hidden, the element is still present in the page
+     * if you use display: none, the element is hidden and won't interact with other elements
+     */
+    display: none;
 }
